--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 	<html lang="pt-br">
+
 		<head>
 			<meta charset="UTF-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+			<title>Jogo da cobrinha</title>
 		</head>
+
+		<body>
+			<h3>Em breve</h3>
+		</body>
 </html>
